cmps104a/Mackey_files/Examples/e07.bison-recursion/rec.output
Grammar

    0 $accept: program $end

    1 program: left '>'
    2        | '(' right

    3 left: left 'L'
    4     | '<'

    5 right: 'R' right
    6      | ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 2
')' (41) 6
'<' (60) 4
'>' (62) 1
'L' (76) 3
'R' (82) 5
error (256)


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
program (10)
    on left: 1 2, on right: 0
left (11)
    on left: 3 4, on right: 1 3
right (12)
    on left: 5 6, on right: 2 5


state 0

    0 $accept: . program $end

    '('  shift, and go to state 1
    '<'  shift, and go to state 2

    program  go to state 3
    left     go to state 4


state 1

    2 program: '(' . right

    'R'  shift, and go to state 5
    ')'  shift, and go to state 6

    right  go to state 7


state 2

    4 left: '<' .

    $default  reduce using rule 4 (left)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: left . '>'
    3 left: left . 'L'

    '>'  shift, and go to state 9
    'L'  shift, and go to state 10


state 5

    5 right: 'R' . right

    'R'  shift, and go to state 5
    ')'  shift, and go to state 6

    right  go to state 11


state 6

    6 right: ')' .

    $default  reduce using rule 6 (right)


state 7

    2 program: '(' right .

    $default  reduce using rule 2 (program)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    1 program: left '>' .

    $default  reduce using rule 1 (program)


state 10

    3 left: left 'L' .

    $default  reduce using rule 3 (left)


state 11

    5 right: 'R' right .

    $default  reduce using rule 5 (right)
